<resources>
    <string name="app_name">Apotek TamanSari</string>
    <string name="title_activity_list_medicine">ListMedicineActivity</string>
    <string name="title_activity_customer_main">CustomerMain</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_customer">Customer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="userName">adrean.thesis.puocc.Fragment.userName</string>
    <string name="userAddress">adrean.thesis.puocc.Fragment.userAddress</string>
    <string name="userId">adrean.thesis.puocc.Fragment.userId</string>
    <string name="apotek_tamansari">Apotek Tamansari</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user ? Register now</string>
    <string name="name_of_medicine">Name of Medicine</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="set_picture">Set Picture</string>
    <string name="apotek_taman_sari">Apotek Taman Sari</string>
    <string name="logout">Logout</string>
    <string name="new_product">New Product</string>
    <string name="quantity">Quantity</string>
    <string name="update">Update</string>
    <string name="save_qr">Save QR</string>
    <string name="price">Price (Rp)</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="filter">Filter</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="register">Register</string>
    <string name="have_a_prescription">Have a Prescription ?\n Chat with our Doctor here!</string>
    <string name="medicine_category">Medicine Category</string>
    <string name="address">Address</string>
    <string name="have_different_address_nclick_here">Have different address ? Click here</string>
    <string name="place_order">Place Order</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="order_item">Order Item</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_detail">User Detail</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="payment_method_transfer">Payment Method : Transfer</string>
    <string name="order">Order</string>
    <string name="user_information">User Information</string>
    <string name="payment_method">Payment Method</string>
    <string name="name">Name</string>
    <string name="transfer">Transfer</string>
    <string name="upload_receipt">Upload Receipt</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="add_apoteker">Add Apoteker</string>
    <string name="list_transaction">List Transaction</string>
    <string name="transaction_list">Transaction List</string>
    <string name="summary_report">Summary Report</string>
    <string name="generate">Generate</string>
    <string name="download">Download</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="gross_income">Gross Income</string>
    <string name="total_transaction">Total Transaction</string>
    <string name="total_prescription_transaction">Total Prescription Transaction</string>
    <string name="total_finished_medicine_transaction">Total Finished Medicine Transaction</string>
    <string name="total_quantity_of_sold_medicine">Total Quantity of Sold Medicine</string>
    <string name="most_bought_medicine">Most Bought Medicine</string>
    <string name="most_bought_medicine_category">Most Bought Medicine Category</string>
    <string name="least_bought_medicine">Least Bought Medicine</string>
    <string name="least_bought_medicine_category">Least Bought Medicine Category</string>
    <string name="gross_income_report">Gross Income Report</string>
    <string name="rupiah">Rp %1$s</string>
    <string name="add_category">Add Category</string>
    <string name="name_category">Category Name</string>
    <string name="prescriptionTrx">Add Prescription Transaction</string>
    <string name="Done">Finish Transaction</string>
    <string name="order_list">Order List</string>
    <string name="order_info">Order Info</string>
    
    <string name="search_medicine">Search Medicine</string>

</resources>
