<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReceiptConfirmationPayActivity"
    android:background="@color/gray3">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_information"
           android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/custName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                tools:text="Customer Name"
                android:textColor="@color/colorDarkGreen"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorDarkGreen"
                android:layout_height="30dp"
                tools:text="Address"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/payment_method"/>

            <TextView
                android:id="@+id/txt1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorDarkGreen"
                android:layout_height="30dp"
                android:text="@string/transfer"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/list"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:clipToPadding="false"
        android:divider="@null"
        android:background="@color/gray4"
        android:dividerHeight="0dp"/>

    <LinearLayout
        android:id="@+id/ll_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/total"/>

        <TextView
            android:id="@+id/totalPrice"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            tools:text="totalPrice"
            android:textColor="@color/colorDarkGreen"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:textSize="16sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:text="@string/confirm"
            style="@style/Button.Positive"/>
    </RelativeLayout>
</LinearLayout>