<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddApotekerActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_edit_text"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/userName"
            android:background="@drawable/border_edit_text"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/userEmail"
            android:background="@drawable/border_edit_text"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/userAddress"
            android:background="@drawable/border_edit_text"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        style="@style/Button.Positive"
        android:layout_margin="16dp"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>