<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userName"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border_edit_text"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border_edit_text"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userPhone"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border_edit_text"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userAddress"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border_edit_text"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/userPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingTop="10dp"
                android:background="@drawable/border_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reTypePass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingTop="10dp"
                android:background="@drawable/border_edit_text"
                android:hint="@string/re_type_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/regBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="bottom"
            android:text="@string/register"
            style="@style/Button.Positive"/>
    </LinearLayout>


</ScrollView>