<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorDarkGreen"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/address"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userEmailTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkGreen"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/phone_number"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userPhoneTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkGreen"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:id="@+id/changePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/change_password"
                android:textColor="@color/colorDarkGreen"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/relPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimaryDark">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/newPass"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/border_edit_text"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtPassword"
                    android:layout_marginBottom="40dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimaryDark">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/newPassConf"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/border_edit_text"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/changePassBtn"
                    style="@style/Button.Positive"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/txtRePassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/submit" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/logout"
        style="@style/Button.Neutral"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/sign_out"
        android:textSize="15sp" />

</RelativeLayout>